--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -123,3 +123,14 @@ CHS-GM1024-10BY 2相4线直径15BY全金属齿轮减速步进电机 参数如图
     \caption{CHIHAI MOTOR DC 5V Brushless Motor 2 Phase 4 Wire Stepper Motor Specification}
     \label{tab:CHS-GM1024-10BY-Specific}
 \end{table}
+
+\section{电机连接器}
+
+采用的电机原装为Molex 51021-0400 连接器 1.25mm Pitch, PicoBlade 1.25 DIP TYPE SMT TYPE \url{https://www.chinese.molex.com/molex/products/part-detail/crimp_housings/0510210400}，为了方便未来批量制作，我们使用对应的插座，如图~\ref{fig:51021-APPLICATION-SPECIFICATION}所示。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{51021-APPLICATION-SPECIFICATION.pdf}
+    \caption{Molex 51021 连接}
+    \label{fig:51021-APPLICATION-SPECIFICATION}
+\end{figure}
