--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -1,6 +1,8 @@
 \chapter{主板及扩展板PCB设计}
 \label{cha:PCB}
 
+本章设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-PCB}
+
 在本设计方案中，主板板载ATmega2560-16AU芯片作为主要MCU，控制外部设备并与次要MCU兼Wifi+普通蓝牙+BLE通信模块的ESP32通信，计算机可以通过ATmega16U2和USB Type-C接口给其烧写程序。主板还包括9个WS2812B RGB LED作为灯光交互、可以驱动三个直流减速电机的电机驱动芯片、ESP32配套编程器CP2102N、锂电池接口和LD1117电压转换、扩展接口等功能模块。
 
 
