--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -134,3 +134,9 @@ CHS-GM1024-10BY 2相4线直径15BY全金属齿轮减速步进电机 参数如图
     \caption{Molex 51021 连接}
     \label{fig:51021-APPLICATION-SPECIFICATION}
 \end{figure}
+
+
+\section{DRV8825 Arduino 控制程序}
+
+本节设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-Code}
+
