--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -1,6 +1,8 @@
 \chapter{PCB 2.0 设计和测试}
 \label{cha:PCB-v2}
 
+本章设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-PCB-v2}
+
 \section{需要解决的问题}
 
 在测试版本的PCB（PCB v1）中出现了不少经过测试发现的问题，在第二版本中尽可能予以纠正：
