--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -1,6 +1,11 @@
 \chapter{动力系统}
 \label{cha:Motor}
 
+参考\url{https://www.moons.com.cn/support-training/technology-college/cn-stepper-motor}
+
+\section{步进电机转矩和速度特性}
+
+
 \section{双极型步进电机}
 
 \begin{figure}[htbp]
@@ -140,3 +145,4 @@ CHS-GM1024-10BY 2相4线直径15BY全金属齿轮减速步进电机 参数如图
 
 本节设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-Code}
 
+pps (pulses per second)
