--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -126,8 +126,11 @@
 % 解决：去掉Misaka-v1.0.pdf的.0。在文件名中不能出现点。
 
 % xdvipdfmx:fatal: pdf_ref_obj(): passed invalid object.   This happened to me when embedding an EPS file into a xelatex document.
-% 未解决，可能是Misaka-v1.pdf有点问题
+% 可能是Misaka-v1.pdf有点问题
 % \includepdf[pages={1-2}]{Misaka-v1.pdf} 
+
+% 解决：另存为更高等级Adobe PDF就好了
+\includepdf[pages={1-2}]{Misaka-v1-DEBUG-SAVE.pdf} 
 
 % \includepdf[pages={1-2}]{MEGA2560_Rev3e_sch.pdf}
 % \includepdf[]{esp32-wroom-32_datasheet_cn_Inside.pdf}
