--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -1,6 +1,8 @@
 \chapter{动力系统}
 \label{cha:Motor}
 
+注：微型反折步进电机和38mm全向轮之间联轴器上的螺丝配的是M3*4的圆头螺钉，在电机旋转时会碰到电机机身卡住，故换成M3*3的PM圆头螺丝。
+
 \section{步进电机概述和控制理论}
 
 
