--- a/data/Model.tex
+++ b/data/Model.tex
@@ -14,3 +14,20 @@
     \label{fig:Camera-Dimension}
 \end{figure}
 
+底盘图纸如图~\ref{fig:Assembled-Test-Datasheet}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Assembled-v1.pdf}
+    \caption{测试用底盘图纸}
+    \label{fig:Assembled-Test-Datasheet}
+\end{figure}
+
+测试用底盘渲染图如图~\ref{fig:Assembled-Test-Render}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Assembled_2020-Mar-02.png}
+    \caption{测试用底盘渲染图}
+    \label{fig:Assembled-Test-Render}
+\end{figure}
