--- a/data/Model.tex
+++ b/data/Model.tex
@@ -31,3 +31,5 @@
     \caption{测试用底盘渲染图}
     \label{fig:Assembled-Test-Render}
 \end{figure}
+
+其中，电机固定件使用的是一颗沉头M3*10的不锈钢螺栓。固定件上留出大径5.3mm小径3mm的沉头螺丝孔，底板上则留一个直径5.9mm圆内接正六边形深度为2.5mm的六角螺母固定孔，以便不用鸭嘴钳拧螺丝，当然也有3mm的圆孔。
