--- a/data/Model.tex
+++ b/data/Model.tex
@@ -14,12 +14,12 @@
     \label{fig:Camera-Dimension}
 \end{figure}
 
-底盘图纸如图~\ref{fig:Assembled-Test-Datasheet}。
+底盘装配图如图~\ref{fig:Assembled-Test-Datasheet}。
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{Assembled-v1.pdf}
-    \caption{测试用底盘图纸}
+    \caption{测试用底盘装配图}
     \label{fig:Assembled-Test-Datasheet}
 \end{figure}
 
@@ -32,4 +32,29 @@
     \label{fig:Assembled-Test-Render}
 \end{figure}
 
-其中，电机固定件使用的是一颗沉头M3*10的不锈钢螺栓。固定件上留出大径5.3mm小径3mm的沉头螺丝孔，底板上则留一个直径5.9mm圆内接正六边形深度为2.5mm的六角螺母固定孔，以便不用鸭嘴钳拧螺丝，当然也有3mm的圆孔。
+其中，电机固定件使用的是一颗沉头M3*10的不锈钢螺栓。固定件上留出大径5.3mm小径3mm的沉头螺丝孔，底板上则留一个直径5.9mm圆内接正六边形深度为2.5mm的六角螺母固定孔，以便不用鸭嘴钳拧螺丝，当然也有3mm的圆孔。如图~\ref{fig:BottomTest-v1-Datasheet}和图~\ref{fig:StepperMount-v1-Datasheet}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{BottomTest-v1.pdf}
+    \caption{测试用底盘图纸}
+    \label{fig:BottomTest-v1-Datasheet}
+\end{figure}
+
+由于两电机之间间隙(矩形可延展4.39mm)不足以放下一个M3螺丝，所以采用了一边卡扣的形式来固定。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{StepperMount-v1.pdf}
+    \caption{步进电机固定座图纸}
+    \label{fig:StepperMount-v1-Datasheet}
+\end{figure}
+
+其中步进和轮子画为一个零件，作确定装配体尺寸用，如图~\ref{fig:StepperAndWheel-v0-Datasheet}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{StepperAndWheel-v0.pdf}
+    \caption{步进和轮子图纸}
+    \label{fig:StepperAndWheel-v0-Datasheet}
+\end{figure}
