--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -1,6 +1,19 @@
 \chapter{XBee}
 \label{cha:XBee}
 
+\section{ZigBee模块概述}
+
+\begin{itemize}
+    \item IEEE 802.15.4
+    \item ZigBee
+    \item ZigBee Smart Energy
+    \item DigiMesh (Digi proprietary)
+    \item ZNet
+    \item IEEE 802.11 (Wi-Fi)
+    \item Point-to-multipoint (Digi proprietary)
+    \item XSC (XStream-compatible)
+\end{itemize}
+
 \section{AT设置}
 
 
@@ -27,4 +40,6 @@
     \item XBee 865LP and Programmable XBee 865LP
     \item XBee3 (Zigbee, DigiMesh 2.4, and 802.15.4)
 \end{itemize}
+
+
 
