--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -3,9 +3,9 @@
 
 \section{ZigBee模块概述}
 
-无线电通信协议是在无线电设备之间进行数据交换的一组规则。RF模块根据模块及其无线电固件支持特定的无线电通信协议。
+无线通信协议是在无线设备之间进行数据交换的一组规则。RF模块根据模块及其无线固件支持特定的无线通信协议。
 
-以下是XBee无线电模块支持的协议的完整列表：
+以下是XBee无线模块支持的协议的完整列表：
 
 \begin{itemize}
     \item IEEE 802.15.4
@@ -25,7 +25,7 @@
     \label{fig:radio_comm_protocols}
 \end{figure}
 
-并非所有XBee设备都可以运行所有列出的通信协议。XBee硬件和无线电固件的组合决定了XBee设备可以执行的协议。
+并非所有XBee设备都可以运行所有列出的通信协议。XBee硬件和无线固件的组合决定了XBee设备可以执行的协议。
 
 \section{固件升级}
 
@@ -52,9 +52,9 @@
 
 \section{AP参数}
 
-XBee无线电模块的操作模式建立了用户或连接到XBee的任何微控制器通过通用异步接收器/发送器（UART）或串行接口与模块进行通信的方式。
+XBee无线模块的操作模式建立了用户或连接到XBee的任何微控制器通过UART或串行接口与模块进行通信的方式。
 
-取决于固件及其配置，无线电模块可以在三种不同的操作模式下工作：
+取决于固件及其配置，无线模块可以在三种不同的操作模式下工作：
 
 \begin{itemize}
     \item Application Transparent (AT) operating mode
@@ -62,6 +62,48 @@ XBee无线电模块的操作模式建立了用户或连接到XBee的任何微控
     \item API escaped operating mode
 \end{itemize}
 
-在某些情况下，无线电模块的运行模式由固件版本（确定运行模式是AT还是API）以及固件的AP设置（确定API模式是否被转义（2））建立， （1）。在其他情况下，操作模式仅由AP设置确定，该设置允许您将模式配置为AT（AP = 0），API（AP = 1）或API转义（AP = 2）。
-\section{AT设置}
+在某些情况下，无线模块的运行模式由固件版本（确定运行模式是AT还是API）以及固件的AP设置（确定API模式）决定。在其他情况下，操作模式仅由AP设置确定，该设置允许您将模式配置为AT（AP = 0），API（AP = 1）或API Escape（AP = 2）。
 
+\subsection{AT}
+
+在AT (Application Transparent) 透明操作模式下，无线模块接收的所有串行数据都排队等待RF传输。当模块接收到RF数据时，数据将通过串行接口发送出去。
+
+要配置在AT中运行的XBee模块，必须将其置于命令模式下以发送配置命令。
+
+当无线模块在AT工作模式下工作时，必须使用命令模式 command mode 界面来配置设置。
+
+要进入AT命令模式，在一秒钟内发送三个字符的命令序列（通常为"+++"）。一旦启动了AT命令模式，该模块将发送"OK \\ r"，启动命令模式计时器，并且无线模块能够接收AT命令。
+
+AT命令的结构为：
+
+\begin{tcolorbox}
+    AT[ASCII command][Space (optional)][Parameter (optional)][Carriage return]
+\end{tcolorbox}
+
+例如：
+
+\begin{tcolorbox}
+    ATNI MyDevice\\r
+\end{tcolorbox}
+
+如果在命令模式超时内未收到有效的AT命令，则无线模块将自动退出AT命令模式。您还可以通过发出CN命令来退出命令模式：
+
+\begin{tcolorbox}
+    (ATCN\\r)
+\end{tcolorbox}
+
+\subsection{API}
+
+API（Application Programming Interface 应用程序编程接口）操作模式是AT模式的替代。API操作模式要求通过结构化接口与模块进行通信。换句话说，数据通过API框架进行通信。
+
+API指定了如何使用串行接口从模块发送和接收命令，命令响应和模块状态消息。使用API​​操作模式，可以：
+
+\begin{itemize}
+    \item 配置XBee模块本身。
+    \item 在网络中配置远程模块。
+    \item 管理数据到多个目的地的传输。
+    \item 接收每个发送的射频数据包的成功/失败状态。
+    \item 标识每个接收到的数据包的源地址。
+\end{itemize}
+
+取决于AP参数值，无线模块可以以下两种模式之一运行：API（AP = 1）或API Escape（AP = 2）操作模式。
