--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -5,11 +5,68 @@
 
 \section{步进电机概述和控制理论}
 
+\footnote{参考\url{https://www.moons.com.cn/support-training/technology-college/cn-stepper-motor}}
 
-参考\url{https://www.moons.com.cn/support-training/technology-college/cn-stepper-motor}
+步进电机是将电脉冲信号转变为角位移或线位移的开环控制元步进电机件，通过控制施加在电机线圈上的电脉冲顺序、频率和数量，可以实现对步进电机的转向、速度和旋转角度的控制。配合以直线运动执行机构或齿轮箱装置，更可以实现更加复杂、精密的线性运动控制要求。步进电机一般由前后端盖、轴承、中心轴、转子铁芯、定子铁芯、定子组件、波纹垫圈、螺钉等部分构成，步进电机也叫步进器，它利用电磁学原理，将电能转换为机械能，是由缠绕在电机定子齿槽上的线圈驱动的。通常情况下，一根绕成圈状的金属丝叫做螺线管，而在电机中，绕在定子齿槽上的金属丝则叫做绕组、线圈、或相。如图~\ref{fig:Stepper-Motor-Open}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{step-servo-motord01.jpg}
+    \caption{步进电机基本结构}
+    \label{fig:Stepper-Motor-Open}
+\end{figure}
+
+步进电机驱动器根据外来的控制脉冲和方向信号，通过其内部的逻辑电路，控制步进电机的绕组以一定的时序正向或反向通电， 使得电机正向/反向旋转，或者锁定。
+
+以1.8度两相步进电机为例：当两相绕组都通电励磁时，电机输出轴将静止并锁定位置。在额定电流下使电机保持锁定的最大力矩为保持力矩。如果其中一相绕组的电流发生了变向，则电机将顺着一个既定方向旋转一步（1.8度）。同理，如果是另外一项绕 组的电流发生了变向，则电机将顺着与前者相反的方向旋转一步（1.8度）。当通过线圈绕组的电流按顺序依次变向励磁时，则电 机会顺着既定的方向实现连续旋转步进，运行精度非常高。对于 1.8度两相步进电机旋转一周需200步。
+
+两相步进电机有两种绕组形式：双极性和单极性。双极性电机每相上只有一个绕组线圈，电机连续旋转时电流要在 同一线圈内依次变向励磁，驱动电路设计上需要八个电子开关进 行顺序切换。
+
+单极性电机每相上有两个极性相反的绕组线圈，如图~\ref{fig:bipolar}，电机连续旋转时只要交替对同一相上的两个绕组线圈进行通电励磁。驱动电路设 计上只需要四个电子开关。在双极性驱动模式下，如图~\ref{fig:unipolar}，因为每相的绕组线圈为100\%励磁，所以双极性驱动模式下电机的输出力矩比单极性驱动模式下提高了约 40\%。
+
+\begin{figure}[htbp]
+    \begin{minipage}{0.48\textwidth}
+      \centering
+      \includegraphics[height=5cm]{step-motor-2-phase-with-bipolar-driver.jpg}
+      \caption{2相（双极性）步进电机}
+      \label{fig:bipolar}
+    \end{minipage}\hfill
+    \begin{minipage}{0.48\textwidth}
+      \centering
+      \includegraphics[height=5cm]{step-motor-2-phase-with-unipolar-driver.jpg}
+      \caption{2相（单极性）步进电机}
+      \label{fig:unipolar}
+    \end{minipage}
+\end{figure}
+
 
 \section{步进电机转矩和速度特性}
 
+步进电机的转动距离正比于施加到驱动器上的脉冲信号数（脉冲数）。
+
+步进电机转动（电机出力轴转动角度$\theta$）和脉冲数A的关系如下所示：
+
+\begin{equation}
+    \theta=\theta_{s} \times A
+\end{equation}
+
+其中$\theta_{s}$为基本步距角，单位是度。
+
+步进电机以一个固定的步距角转动，就像时钟内的秒针。这个角度称为基本步距角。一种标准电机是基本步距角为1.8度的两相步进电机。
+
+步进电机的转速与施加到驱动器上的脉冲信号频率成比例关系。
+
+电机的转速$\mathrm{N}$[r/min] 与脉冲频率$\mathrm{f}$[Hz] 的关系如下（整步模式）：
+
+\begin{equation}
+    \mathrm{N}=\frac{\theta_{\mathrm{s}}}{360} \times \mathrm{f} \times 60
+\end{equation}
+
+步进电机的重要特征之一是高力矩、小体积。
+
+这些特征使得电机具有优秀的加速和响应，使得这些电机非常适合那些需要频繁启动和停止的应用中。
+
+绕组通电时步进电机具有全部的保持力矩。这就意味着步进电机可以在不使用机械刹车的情况下保持在停止位置。
 
 \section{双极型步进电机}
 
