--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -5,9 +5,7 @@
 
 \section{步进电机概述和控制理论}
 
-\footnote{参考\url{https://www.moons.com.cn/support-training/technology-college/cn-stepper-motor}}
-
-步进电机是将电脉冲信号转变为角位移或线位移的开环控制元步进电机件，通过控制施加在电机线圈上的电脉冲顺序、频率和数量，可以实现对步进电机的转向、速度和旋转角度的控制。配合以直线运动执行机构或齿轮箱装置，更可以实现更加复杂、精密的线性运动控制要求。步进电机一般由前后端盖、轴承、中心轴、转子铁芯、定子铁芯、定子组件、波纹垫圈、螺钉等部分构成，步进电机也叫步进器，它利用电磁学原理，将电能转换为机械能，是由缠绕在电机定子齿槽上的线圈驱动的。通常情况下，一根绕成圈状的金属丝叫做螺线管，而在电机中，绕在定子齿槽上的金属丝则叫做绕组、线圈、或相。如图~\ref{fig:Stepper-Motor-Open}。
+步进电机\footnote{参考\url{https://www.moons.com.cn/support-training/technology-college/cn-stepper-motor}}是将电脉冲信号转变为角位移或线位移的开环控制元步进电机件，通过控制施加在电机线圈上的电脉冲顺序、频率和数量，可以实现对步进电机的转向、速度和旋转角度的控制。配合以直线运动执行机构或齿轮箱装置，更可以实现更加复杂、精密的线性运动控制要求。步进电机一般由前后端盖、轴承、中心轴、转子铁芯、定子铁芯、定子组件、波纹垫圈、螺钉等部分构成，步进电机也叫步进器，它利用电磁学原理，将电能转换为机械能，是由缠绕在电机定子齿槽上的线圈驱动的。通常情况下，一根绕成圈状的金属丝叫做螺线管，而在电机中，绕在定子齿槽上的金属丝则叫做绕组、线圈、或相。如图~\ref{fig:Stepper-Motor-Open}。
 
 \begin{figure}[htbp]
     \centering
