--- a/data/Motor.tex
+++ b/data/Motor.tex
@@ -88,17 +88,9 @@
 
 A. 工作频率点 电机在某一点的转速值。
 
-速率：
+速率 n = q * Hz / (360 * D)
 
-n = q * Hz / (360 * D)
-
-n: 转/秒
-
-Hz: 频率值
-
-D: 驱动电路细分值
-
-q: 步距角
+其中 n: 转/秒 Hz: 频率值 D: 驱动电路细分值 q: 步距角
 
 步距角1.8°的步进电机，在 1/2 细分驱动方式下 (即每步 0.9°) 、 工作频率 500Hz 时的转速为1.25r/s.
 
