Digi XBee Family Features Comparison

--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -27,6 +27,13 @@
 
 并非所有XBee设备都可以运行所有列出的通信协议。XBee硬件和无线固件的组合决定了XBee设备可以执行的协议。
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{chart_xbee_rf_features.pdf}
+    \caption{Digi XBee Family Features Comparison}
+    \label{fig:xbee_rf_features}
+\end{figure}
+
 \section{固件升级}
 
 本地设备设置AP=2 即 API mode 能使用Network Working Mode，以便升级固件。
