--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -481,6 +481,17 @@ Receive Packet (API 1) 如图~\ref{fig:XBee-XTCU-Receive-Packet}。分析RECEIVE
     \label{fig:XBee-XTCU-Receive-Packet}
 \end{figure}
 
+\section{Range Test}
+
+可以进行如图~\ref{fig:XBee-XTCU-Range-Test}所示的信号距离测试确定模块的天线是否正常工作，
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{XBee-XTCU-Range-Test.png}
+    \caption{XTCU Range Test}
+    \label{fig:XBee-XTCU-Range-Test}
+\end{figure}
+
 
 \section{Arduino XBee 开发环境配置}
 
