--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -614,13 +614,20 @@ BOM中不属于JLC基础库的需要每种加20换料费，所有全贴片目前
     \label{fig:Manufacture-v1-2}
 \end{figure}
 
-Test Board 3D仿真如图~\ref{fig:TestBoard3D}
+Test Board 3D仿真如图~\ref{fig:TestBoard3D}和图~\ref{fig:TestBoard3D-2}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{TestBoard3D.png}
     \caption{Test Board 3D仿真}
     \label{fig:TestBoard3D}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\columnwidth]{TestBoard3D-2.png}
+    \caption{Test Board 3D仿真}
+    \label{fig:TestBoard3D-2}
 \end{figure}
 
 \section{总结}
