--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -136,3 +136,6 @@
 % \includepdf[]{esp32-wroom-32_datasheet_cn_Inside.pdf}
 % \includepdf[]{esp32_devkitc_v4-sch.pdf}
 % \includepdf[]{ESP-WROVER-KIT_V4_1.pdf}
+
+% 3D PDF 显示不出来
+% \includepdf[]{Misaka-v1-3DPDF.pdf}
