--- a/data/Model.tex
+++ b/data/Model.tex
@@ -58,3 +58,10 @@
     \caption{步进和轮子图纸}
     \label{fig:StepperAndWheel-v0-Datasheet}
 \end{figure}
+
+
+电机固定加凹槽，固定一下前后位置。
+
+PCB放置到凹槽里面，固定水平位置
+
+电机固定一颗螺丝固定相邻两个电机，重叠边沿打孔。
