--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -122,6 +122,7 @@
 \includepdf[pages={8-9}]{esp32-wroom-32_datasheet_cn.pdf}
 
 \section{PCB原理图}
+\label{sec:PCB}
 % ! LaTeX Error: Cannot determine size of graphic in figures/Misaka-v1.0.pdf (no BoundingBox).
 % 解决：去掉Misaka-v1.0.pdf的.0。在文件名中不能出现点。
 
@@ -139,3 +140,5 @@
 
 % 3D PDF 显示不出来
 % \includepdf[]{Misaka-v1-3DPDF.pdf}
+
+\includepdf[pages={1-9}]{CircuitPCB.pdf}
