--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -204,6 +204,8 @@ WS2812B模块原理图如图~\ref{fig:Circuit-8}所示。
 
 \section{布线}
 
+布线方法参考下文：
+
 Press W or select Custom Track Width from the context menu to type in a custom track width/via size.
 
 To activate the router tool press the Interactive Router button Interactive Router Button or the X key. 
@@ -213,6 +215,24 @@ Pressing V or selecting Place Through Via from the context menu while routing a 
 Pressing / or selecting Switch Track Posture from the context menu toggles the direction of the initial track segment between straight or diagonal.
 
 The router can drag track segments, corners and vias. To drag an item, click on it with Ctrl key pressed, hover the mouse and press G or select Drag Track/Via from the context menu.
+
+布线之后的PCB详见附录~\ref{sec:PCB}。
+
+正面如图~\ref{fig:CircuitPCB-F}，背面如图~\ref{fig:CircuitPCB-B}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{CircuitPCB-F.pdf}
+    \caption{PCB正面}
+    \label{fig:CircuitPCB-F}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{CircuitPCB-B.pdf}
+    \caption{PCB背面}
+    \label{fig:CircuitPCB-B}
+\end{figure}
 
 \section{三维渲染图}
 
