--- a/data/Model.tex
+++ b/data/Model.tex
@@ -14,6 +14,9 @@
     \label{fig:Camera-Dimension}
 \end{figure}
 
+定位模块配套母排离PCB高度为4.3mm，所以Camera下端居PCB底面约为27mm，根据经验需要预留7-10mm的离地距离，所以按照35mm预留，小于轮子直径38mm，考虑可以加一个延长针脚座使用，所以PCB离地设计为50mm。
+
+
 底盘装配图如图~\ref{fig:Assembled-Test-Datasheet}。
 
 \begin{figure}[htbp]
@@ -65,3 +68,7 @@
 PCB放置到凹槽里面，固定水平位置
 
 电机固定一颗螺丝固定相邻两个电机，重叠边沿打孔。
+
+
+\section{关键参数计算}
+
