在智能电网中使用XBee的优势

--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -523,3 +523,13 @@ Channel and PAN ID 需要一致，一个Coordinator CE=1 Form Network，多个Ro
 \end{table}
 
 使用XBee Pro S2B作为Routers之前要更新Firmware为 BBP24BZ7 - Zigbee Router API - 23A7(Newest)。
+
+
+
+
+
+\section{在智能电网中使用XBee的优势}
+
+可以Mesh组网，鲁棒性强，适合对通信可靠性要求高的微型电网供电设备。
+
+传输距离远，可以达到3km以上，适合城市内智能电网设备。
