--- a/data/Model.tex
+++ b/data/Model.tex
@@ -67,9 +67,12 @@
 
 PCB放置到凹槽里面，固定水平位置
 
+
+/section{Model v2}
+
 电机固定一颗螺丝固定相邻两个电机，重叠边沿打孔。
 
-采用暴力热熔胶固定的方式，一个长方形开口
+采用暴力热熔胶固定的方式，一个长方形固定位，上沿和轮侧面用一根PLA材料热熔胶固定
 
 
 \section{关键参数计算}
