--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -258,3 +258,76 @@ The router can drag track segments, corners and vias. To drag an item, click on 
     \caption{侧视渲染图}
     \label{fig:Circuit-Render-3}
 \end{figure}
+
+\section{焊接}
+
+使用InteractiveHtmlBom\footnote{\url{https://github.com/openscopeproject/InteractiveHtmlBom}}(Interactive HTML BOM plugin for KiCad)工具导出了HTML BOM方便焊接时对照BOM，如图~\ref{fig:InteractiveHtmlBom}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{InteractiveHtmlBom.png}
+    \caption{InteractiveHtmlBom}
+    \label{fig:InteractiveHtmlBom}
+\end{figure}
+
+由于AT Mega的100A, 100-lead, 14 x 14 mm Body Size, 1.0 mm Body Thickness, 0.5 mm Lead Pitch, Thin Profile Plastic Quad Flat Package (TQFP)封装较难手焊，于是定制了相应的激光钢网，涂锡膏（solder paste）之后摆上元件，并使用相应的恒温锡炉加热融化锡膏，这里使用的是138度熔点的千住锡浆，锡炉温度设定在180摄氏度。如图~\ref{fig:ApplySolderPaste}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{PCBv2ApplySolderPaste.jpg}
+    \caption{激光钢网涂锡膏}
+    \label{fig:ApplySolderPaste}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{SolderOven.jpg}
+    \caption{恒温锡炉（无铅预热平台）}
+    \label{fig:SolderOven}
+\end{figure}
+
+
+正面焊完效果如图~\ref{fig:PCBv2Soldring}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{PCBv2Soldring.jpg}
+    \caption{正面焊完效果}
+    \label{fig:PCBv2Soldring}
+\end{figure}
+
+使用Arduino as ISP烧写Blink和Floar LED String Test程序，测试部分功能正常。如图~\ref{fig:PCBv2ISP}和图~\ref{fig:PCBv2Test}。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{PCBv2ISP.jpg}
+    \caption{使用Arduino as ISP烧写}
+    \label{fig:PCBv2ISP}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{PCBv2Test.jpg}
+    \caption{Floar LED String Test程序运行效果}
+    \label{fig:PCBv2Test}
+\end{figure}
+
+\section{Debug}
+
+第一次通过USB上电就出现一个严重的问题，C12炸飞，火星四溅。烧毁的PCB如图~\ref{fig:BrokenPCB}。经过排查，是5V net经过C12下方的走线宽度过小，导致大功率经过时发热过大，把整条线路熔断，看到的火花并非电容爆炸时产生的，而是基板中的顶层铜层发热积累，破坏基板和阻焊之后过热的铜片产生的火花。如图~\ref{fig:BrokenPCB}，当仅使用5V供电时，几乎所有元件的功率都叠加在C12下面的走线上，当初画的板子时不合理的。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{PCBv2BrokenPCB.jpg}
+    \caption{烧毁的PCB}
+    \label{fig:BrokenPCB}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{BrokenPCB-5V.png}
+    \caption{5V net 存在的串联瓶颈问题}
+    \label{fig:BrokenPCB-Illumination}
+\end{figure}
+
+以及焊接的时候，用除去多余焊锡的烙铁头解决AT Mega引脚相连问题时，400度加热时间过长，导致芯片损坏，使用ISP烧写程序时时断时续。
